# ardupilot-esp32c6

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  battery.c  battery.h  config.h  idf_component.yml  main.c  mavlink_handler.c  mavlink_handler.h  params.c  params.h  pid.c  pid.h  pwm_output.c  pwm_output.h  wifi_link.c  wifi_link.h
scripts/: fetch_mavlink.sh
